<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/boardsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tables"
            android:layout_marginBottom="50dp" />
        <Button
            android:id="@+id/maintenanceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maintenance"
            android:layout_marginBottom="50dp" />
        <Button
            android:id="@+id/saveDataBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:layout_marginBottom="50dp" />
        <Button
            android:id="@+id/loadDataBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_data"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>